# tests

./: .gitignore
Archive/test01/: test.cpp
Archive/test02/: test.cpp
Archive/test03/: test.cpp  test.txt  test_output
Archive/test04/: set>.cpp  test.cpp
Archive/test05/: build.sh  clean.sh  run.sh  test.cpp
Archive/test06/: CMakeLists.txt  test.cpp
Archive/test07/: test.cpp
Archive/test09/: CMakeLists.txt  test.cpp
Archive/test10/: test.cpp
Archive/test11/: CMakeLists.txt  msgprint.h  test.cpp
Archive/test12/: test.cpp  test.s.1  test.s.2  text.txt
Archive/test13/: test.cpp
Archive/test14/: test.cpp
Archive/test15/: test.cpp
Archive/test16/: CMakeLists.txt  test.cpp
Archive/test17/: CMakeLists.txt  test.cpp
Archive/test19/: CMakeLists.txt  test.cpp
Archive/test21/: CMakeLists.txt  in.txt  test.cpp
Archive/test22/: CMakeLists.txt  test.cpp  y.cpp
Archive/test23/: test.cpp
Archive/test24/: CMakeLists.txt  test.cpp
Archive/test25/: CMakeLists.txt  test.cpp
Archive/test27/: CMakeLists.txt  test.cpp
Archive/test28/: CMakeLists.txt  test.cpp
Archive/test31/: CMakeLists.txt  test.cpp  test.txt  test0.txt
Net/net_test1/: test.cpp
Net/net_test2/: CMakeLists.txt  test.cpp
Net/net_test3/: CMakeLists.txt  test.cpp
Net/router/: CMakeLists.txt  test.cpp
Net/sock/: CMakeLists.txt  (+1 more)
Template/: test.cpp
cheat/forkexec/: CMakeLists.txt  cheat.cpp  test.sh
net_test1/: CMakeLists.txt  build.sh  test.cpp
net_test2/: test.cpp
test29/: t.cpp  test.cpp
test30/: CMakeLists.txt  fifo.h  test.cpp
test36/: CMakeLists.txt  isint.c  test.cpp
(+21 files in other folders)
